	* src/ui/main.c: Updated init_arduino() call.

2014-4-27 Joe Jevnik <joejev@gmail.com>
	* src/controls/controls.c: Changed the scaling from [0,1023] to [0,255]

2014-5-1 Joe Jevnik <joejev@gmail.com>
	* src/controls/controls.c: Changed the scaling to [-180,180]. Added the
	new syncing to only sync when diff'd.
	* lib/screen/screen.h, lib/screen/screen.c: Updated the stat logging
	features for smooth logging functions that have the same style as
	the console logging functions.
	* src/ui/stats.h, src/ui/stats.c: Added functions to do the specifics
	of the stat window printing with colored prints and such.
	* src/comm/msgqueue.h, src/comm/msgqueue.c: Changed where and how
	miswrites are counted, and added a writes to keep a ratio.
	* src/controls/pinlayout.h, src/controls/pinlayout.c: Added new pins
	for new things.
	* src/CMakeLists.txt: Added the new stats.c file.
	* src/common.h: Added an rov_ctrlstate struct to hold all the state
	to make it easier to copy them in one shot to check for changes.
	* TODO: updated TODO

2014-05-15 Joe Jevnik <joejev@gmail.com>
	* src/controls/keybinds.h, src/controls/keybinds.c: Now uses libguile.
	* src/controls/pinlayout.h, src/controls/pinlayout.c: Now uses libguile.

2014-05-17 Joe Jevnik <joejev@gmail.com>
	* src/controls/controls.h, src/controls/controls.c: Added support for
	the logic modules (robobot logic written in scheme).
	* COPYING: Upgraded license from gpl-2 to gpl-3 to comply with libguile.
	* src/controls/keybinds.c, src/controls/pinlayout.c: Now put the parsers
	in a scheme module.
	* build/parsers/keybinds-parser.scm, build/parsers/pin-parser.scm: Moved
	the scheme parsers for keybindings and pinlayouts, wrapped them both in
	modules.
	* TODO: Updated TODO with writing the logic module.

2014-05-17 Joe Jevnik <joejev@gmail.com>
	* build/logic.scm: Completed a preliminary logic module for the
	robot.
	* TODO: Updated TODO to remove the completion of the logic module.