@@ -210,7 +210,7 @@ typedef struct rov_arduino{
     rov_ctrlstate     ctrl;       // The entire control state.
 }rov_arduino;
 
-// A structure to pass to the process joystick thread.
+// A structure to pass to the process logic thread.
 typedef struct{
     rov_screen  *scr;         // The screen structure.
     rov_arduino *a;           // The arduino that thisthread must act on.
@@ -219,7 +219,7 @@ typedef struct{
     useconds_t   shz;         // The Hz of the sending.
     bool         always_step; // logic-step should be called even if input-state
                               // has not changed.
-}rov_pjs_param;
+}rov_pl_param;
 
 // A structure to pass to the process queue thread.
 typedef struct{
